parei por hoje.

--- a/assets/index.html
+++ b/assets/index.html
@@ -30,6 +30,11 @@
             <label>Email</label>
             <input type="email" nome="email" id="email" />
         </div>
+
+        <div>
+            <label>De qual cidade voce é?</label>
+            <input type="radio" nome=""/>
+        </div>
     </form>
     
 </body>
