--- a/assets/index.html
+++ b/assets/index.html
@@ -4,38 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário elaborada</title>
+    <title>Formulário</title>
 </head>
 <body>
     <div>
         <h1>Cadastro</h1>
-        <p>Complete suas informações</p>
+        <p>Dados Pessoais</p>
         <br/>
     </div>
-
     <form>
-        <fieldset>
-            <div>
-                <label>Nome</label>
-                <input type="text" name="Nome" id="Nome"/>
-            </div>
-
-            <div>
-                <label>Sobrenome</label>
-                <input type="text"nome="sobrenome"id="sobrenome"/>
-            </div>
-        </fieldset>
-
-        <div>
-            <label>Email</label>
-            <input type="email" nome="email" id="email" />
-        </div>
-
-        <div>
-            <label>De qual cidade voce é?</label>
-            <input type="radio" nome=""/>
-        </div>
+        <label>Nome:</label>
+        <input type="text" name="nome" id="nome" />
+        <br/>
+        <label>Sobrenome:</label>
+        <input type="text" name="sobrenome" id="sobrenome" />
+        <br/>
+        <label>E-mail</label>
+        <input type="email" name="e-mail" id="e-mail" />
+        <br/>
+        <label>Idade:</label>
+        <input type="date" name="idade" id="idade" />
+        <br/>
     </form>
-    
+         <div>
+             <h1>Endereço</h1>
+         </div>
+    <form>
+      <label>Rua:</label>
+      <input type="text" name="endereço" id="endereço" />
+      <label>Qd/Lt</label>
+      <input type="text" name="numero" id="numero" />
+      <br/>
+      <label>Cep:</label>
+      <input type="number" name="numero" id="numero" />
+      <br/>
+      <label>Cidade:</label>
+      <input type="text" name="cidade" id="cidade" />
+      <label>Uf:</label>
+      <input type="text" name="estado" id="estado" />
+      <br/>
+      <input type="submit" value="Enviar" />
+    </form>
+
+ 
 </body>
 </html>
