--- a/assets/index.html
+++ b/assets/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/template.css" />
     <title>Formulário</title>
 </head>
 <body>
     <div>
         <h1>Cadastro</h1>
-        <p>Dados Pessoais</p>
+        <p>Área de Cadastro</p>
         <br/>
     </div>
     <form>
@@ -40,7 +41,7 @@
       <br/>
       <label>Cidade:</label>
       <input type="text" name="cidade" id="cidade" />
-      <label>Uf:</label>
+      <label>Uf</label>
       <input type="text" name="estado" id="estado" />
       <br/>
       <input type="submit" value="Enviar" />
