--- a/assets/index.html
+++ b/assets/index.html
@@ -14,9 +14,8 @@
         <br/>
     </div>
     <form>
-        <label>Nome:</label>
+        <label>Nome:</label> <br/>
         <input type="text" name="nome" id="nome" />
-        <br/>
         <label>Sobrenome:</label>
         <input type="text" name="sobrenome" id="sobrenome" />
         <br/>
