estilizacao feita, nao estar das melhores porem salva.

--- a/assets/index.html
+++ b/assets/index.html
@@ -37,11 +37,22 @@
             <label>
                 Cidade:<br/>
                 <input type="text" name="cidade" />
+            <label>Uf:
+                <select>
+                    <option></option>
+                    <option>GO</option>
+                    <option>DF</option>
+                    <option>SP</option>
+                    <option>RJ</option>
+                </select>
+            </label>
             </label>
             <br/>
             <label>
                 Rua:<br/>
                 <input type="text" name="rua" />
+                <label>Cep:</label>
+                <input type="number" name="numero" />
             </label>
             <br/>
             <label>
